# union-script

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon
src/: commands.hpp  executor.hpp  executor.zig  info.hpp  main.cpp  main.zig  utilit.zig  utils.hpp
